--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url = jdbc:mysql://localhost:3306/testcoursedb
+spring.datasource.url = jdbc:mysql://localhost:3306/shoppingdb
 
 spring.datasource.username = root
 
